<resources>

    <string name="app_name">UltiTrack 90</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_activity">main_activity</string>
    <string name="btn_Get_Fit">Get Fit</string>
    <string name="btn_Preferences">Preferences</string>
    <string name="btn_Bands">Customize Bands</string>
    <string name="btn_Program">Select Program</string>
    <string name="sEquipKey">Equipment Key</string>
    <string name="btn_Date">Date</string>
    <string name="btn_Prev">Prev</string>
    <string name="btn_Skip">Skip</string>
    <string name="btn_Save">Save</string>
    <string name="sReps">Reps</string>
    <string name="sMinusSign">-</string>
    <string name="sPlusSign">+</string>
    <string name="sWeight">Weight</string>
    <string name="sBand">Band</string>
    <string name="sNotesHint">Enter Notes Here</string>
    <string name="sHistory">History</string>
    <string name="sHome">Home</string>
    <string name="sShare">Share</string>
    <string name="sTimer">00.00.00</string>
    <string name="sStart">Start</string>
    <string name="sStop">Stop</string>
    <string name="sPause">Pause</string>
    <string name="sReset">Reset</string>
    <string name="sCustomBands">Custom Bands</string>
    <string name="sName">Name</string>
    <string name="sBandColor">Color</string>
    <string name="sAdd">Add</string>
    <string name="sCancel">Cancel</string>
    <string name="sDone">Done</string>
    <string name="sPreferences">Preferences</string>
    <string name="sMeasurements">Measurements</string>
    <string name="sFacebook">Facebook</string>
    <string name="sActive">Active</string>
    <string name="sCustom">Custom</string>
    <string name="sEdit">Edit</string>
    <string name="sDelete">Delete</string>
    <string name="sClone">Clone</string>
    <string name="sGetFit">Get Fit!</string>
    <string name="sDay">Day </string>
    <string name="sDayNumber">1</string>
    <string name="sRestart">Restart</string>
    <string name="sComplete">Complete</string>
    <string name="sSkip">Skip</string>
    <string name="sSettings">Settings</string>
    <string name="sPrevious">Previous</string>
    <string name="sSaveNext">Save/Next</string>
    <string name="sViewAll">View All</string>
    <string name="sOf">of</string>
    <string name="sDaysCompleted">Workouts Completed</string>
    <string name="sClear">Clear</string>
    <string name="sTime">Time</string>
    <string name="sDate">Date</string>
    <string name="sNotes">Notes</string>
    <string name="sNext">Next</string>
    <string name="sWgt">Wgt</string>
    <string name="sColor">Color</string>
    <string name="sOK">OK</string>
    <string name="sTotalCompletions">Total Completions:</string>
    <string name="sBands">Bands</string>
    <string name="sWeightRange">Weight Range:</string>

</resources>