    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        
        
        <item android:id="@+id/miPrev" android:showAsAction="always" android:title="@string/btn_Prev"></item>
        <item android:id="@+id/miSkip" android:showAsAction="always" android:title="@string/btn_Skip"></item>
        <item android:id="@+id/miSaveNext" android:showAsAction="always" android:title="@string/sSaveNext"></item>
        <item android:id="@+id/miDropdown" android:showAsAction="always" android:title="@string/sMinusSign">
            <menu>
                <group android:id="@+id/group1">
                    <item android:id="@+id/miViewAll" android:showAsAction="always" android:title="@string/sViewAll"></item>
                    <item android:id="@+id/miSettings" android:title="@string/sSettings" android:showAsAction="always"></item>
                </group>
            </menu>
            </item>
        
    </menu>