
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background" >

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/sTimer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="64dp" />

        <LinearLayout
            android:id="@+id/llhButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvTimer" >

            <Button
                android:id="@+id/bStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sStart"
                android:textSize="20sp"
                android:background="@drawable/metalbutton" />

            <Button
                android:id="@+id/bStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sStop"
                android:textSize="20sp"
                android:visibility="gone"
                android:background="@drawable/metalbutton" />

            <Button
                android:id="@+id/bReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sReset"
                android:textSize="20sp" 
                android:background="@drawable/metalbutton"/>
        </LinearLayout>

                <Button
                    android:id="@+id/bDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llhButtons"
                    android:text="@string/btn_Date"
                    android:textSize="20sp" 
                    android:background="@drawable/metalbutton"/>

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/llhButtons"
            android:layout_toRightOf="@id/bDate"
            android:ems="10"
            android:hint="@string/sNotesHint"
            android:inputType="textMultiLine"
            android:textSize="12sp"
            android:background="@drawable/editbox_state" >

            <requestFocus />
        </EditText>
        
     <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inNavBar"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="a1503920cba69e9"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 9559BFD1B4230703E5389D51414D75E5" >

    </com.google.ads.AdView>

    <include
        android:id="@+id/inNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/exerdetail_navbar" />


    </RelativeLayout>
