
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlBands"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" 
        android:background="@android:color/white"
        >

        <LinearLayout
            android:id="@+id/llhBandDialogHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/tvColor"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sWeight"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvBands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llhBandDialogHeader" >

        </ListView>

        <LinearLayout
            android:id="@+id/llhBandDiaglogButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lvBands" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sCancel"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="85sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sActive"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>
